--- a/accessory/info/test.plist
+++ b/accessory/info/test.plist
@@ -18,5 +18,10 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Path</key>
+	<dict>
+		<key>Root</key>
+		<string>$(SRCROOT)</string>
+	</dict>
 </dict>
 </plist>
