Remove Gig and Xenomorph submodules in favor of local configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "dependency/git/ignore"]
-	path = dependency/git/ignore
-	url = https://github.com/bitwild/gitignore
-[submodule "dependency/git/xenomorph"]
-	path = dependency/git/xenomorph
-	url = https://github.com/swifteroid/xenomorph
+[submodule "dependency/Git/xcconfigs"]
+	path = dependency/Git/xcconfigs
+	url = https://github.com/xcconfigs/xcconfigs.git
